Update internal links after pages moved

--- a/docs/03.admin/20.backups/05.evaluate.mdx
+++ b/docs/03.admin/20.backups/05.evaluate.mdx
@@ -26,11 +26,11 @@ Example of **a robust and comfortable combination**:
 
 ## Some possible methods
 
-- [generate an archive and download it manually (default method of YunoHost)](/administer/backups/#manual-backup)
-- [backup automatically (recommended method)](/administer/backups/backup_methods)
-- [generate an archive directly on another disk](/administer/tutorials/external_storage)
-- [make a disk image or snapshot](/administer/backups/clone_filesystem)
-- [save useful data via a custom method](/administer/backups/custom_backup_methods)
+- [generate an archive and download it manually (default method of YunoHost)](/admin/backups/#manual-backup)
+- [backup automatically (recommended method)](/admin/backups/backup_methods)
+- [generate an archive directly on another disk](/admin/tutorials/external_storage)
+- [make a disk image or snapshot](/admin/backups/clone_filesystem)
+- [save useful data via a custom method](/admin/backups/custom_backup_methods)
 
 ## Risks
 
