--- a/i18n/de/docusaurus-plugin-content-docs/current/03.admin/15.admin_guide/45.email.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/03.admin/15.admin_guide/45.email.mdx
@@ -22,7 +22,7 @@ Um Ihre Einstellungen zu validieren:
 
 ## E-Mail-Programme
 
-Um mit dem E-Mail-Server zu interagieren (E-Mails lesen und senden), können Sie entweder einen Webclient wie Roundcube oder Rainloop auf Ihrem Server installieren - oder einen Desktop-/Mobil-Client, wie auf [dieser Seite](/user_guide/email_configure_client) beschrieben, konfigurieren.
+Um mit dem E-Mail-Server zu interagieren (E-Mails lesen und senden), können Sie entweder einen Webclient wie Roundcube oder Rainloop auf Ihrem Server installieren - oder einen Desktop-/Mobil-Client, wie auf [dieser Seite](/user/email_configure_client) beschrieben, konfigurieren.
 
 Desktop- und Mobil-Clients haben den Vorteil, dass sie Ihre E-Mails auf das Gerät kopieren, was eine Offline-Anzeige und einen relativen Schutz gegen mögliche Hardware-Ausfälle Ihres Servers ermöglicht.
 
@@ -40,11 +40,11 @@ Wenn Ihr Server nicht mehr verfügbar ist, bleiben die an Ihren Server gesendete
 
 It is possible that the emails sent from your YunoHost instance are considered as spam by the big email services.
 Is it possible that the IP address from your server have been previously been used to sent spam or that these email services consider your server as a spam sender.
-To ensure that your servers’ IP address isn't on these blacklists and to remove it from them, follow this [link](/administer/troubleshooting/blacklist_forms).
+To ensure that your servers’ IP address isn't on these blacklists and to remove it from them, follow this [link](/admin/troubleshooting/blacklist_forms).
 ## Eine Migration von E-Mails von einem E-Mail-Provider zu einer YunoHost-Instanz
 
-Siehe [diese Seite](/user_guide/email_migration).
+Siehe [diese Seite](/user/email_migration).
 
 ## Configuring SMTP relay
 
-See [this page](/administer/tutorials/email_configure_relay).
+See [this page](/admin/tutorials/email_configure_relay).
