--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.admin/20.backups/05.evaluate.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.admin/20.backups/05.evaluate.mdx
@@ -26,11 +26,11 @@ Exemple d'**une combinaison** robuste et comfortable:
 
 ## Quelques méthodes possibles
 
-- [générer une archive et la télécharger manuellement (méthode par défaut de YunoHost)](/administer/backups/#sauvegarde-manuelle)
-- [sauvegarder automatiquement (méthode conseillée)](/administer/backups/backup_methods)
-- [générer une archive directement sur un autre disque](/administer/tutorials/external_storage)
-- [faire une image du disque ou un snapshot](/administer/backups/clone_filesystem)
-- [sauvegarder les données utiles via une méthode personnalisée](/administer/backups/custom_backup_methods)
+- [générer une archive et la télécharger manuellement (méthode par défaut de YunoHost)](/admin/backups/#sauvegarde-manuelle)
+- [sauvegarder automatiquement (méthode conseillée)](/admin/backups/backup_methods)
+- [générer une archive directement sur un autre disque](/admin/tutorials/external_storage)
+- [faire une image du disque ou un snapshot](/admin/backups/clone_filesystem)
+- [sauvegarder les données utiles via une méthode personnalisée](/admin/backups/custom_backup_methods)
 
 ## Risques
 
