--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/15.filezilla.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/15.filezilla.mdx
@@ -43,7 +43,7 @@ Installez le programme et lancez *Filezilla*.
 
    ![la vue pendant la connexion à un serveur distant](/img/filezilla_6.png)
 
-2. Dans le panneau de droite, vous pouvez aller dans `/home/yunohost.backup/archives/` pour trouver les archives de [sauvegardes](/administer/backups/).
+2. Dans le panneau de droite, vous pouvez aller dans `/home/yunohost.backup/archives/` pour trouver les archives de [sauvegardes](/admin/backups/).
 
    ![le chemin où les sauvegardes sont situées sur YunoHost](/img/filezilla_7.png)
 
