--- a/i18n/it/docusaurus-plugin-content-docs/current/03.admin/15.admin_guide/45.email.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.admin/15.admin_guide/45.email.mdx
@@ -22,7 +22,7 @@ Per assicurarsi una configurazione corretta:
 
 ## Programmi (client) per la posta elettronica
 
-Per interagire con il vostro server mail, ricevere e inviare le mail, potete installare un client web come Roundcube o Rainloop sul vostro server, oppure configurare un client su pc o smartphone, come descritto [in questa pagina](/user_guide/email_configure_client).
+Per interagire con il vostro server mail, ricevere e inviare le mail, potete installare un client web come Roundcube o Rainloop sul vostro server, oppure configurare un client su pc o smartphone, come descritto [in questa pagina](/user/email_configure_client).
 
 I client sul pc e smartphone godono del vantaggio di scaricare i messaggi sul device, permettendo la consultazione dei messaggi anche off line e una parziale protezione dalla perdita dei messaggi in caso di guasti al vostro server.
 
@@ -32,7 +32,7 @@ Per ogni utente possono essere configurati gli alias e l'inoltro dei messaggi. A
 
 Una funzione non molto conosciuta riguarda l'utilizzo dei suffissi contrassegnati con il simbolo "+".Ad esempio le mail inviate all'indirizzo `johndoe+sncf@mio.dominio.tld` finiranno nella cartella 'sncf' dell'account di John Doe (oppure semplicemente in Posta in Arrivo se la cartella 'sncf' non esiste). Questa funzione permette di ricevere le mail direttamente nella cartella di destinazione.
 
-I gruppi di utenti, possono utilizzare gli alias. Il gruppo `admins` di default dispone degli indirizzi `root@<mio.dominio.tld>` e `webmaster@<mio.dominio..tld>`. [Ulteriori informazioni qui](/administer/admin_guide/users/groups_and_permissions#config-alias-group).
+I gruppi di utenti, possono utilizzare gli alias. Il gruppo `admins` di default dispone degli indirizzi `root@<mio.dominio.tld>` e `webmaster@<mio.dominio..tld>`. [Ulteriori informazioni qui](/admin/admin_guide/users/groups_and_permissions#config-alias-group).
 
 ## Cosa succede se il mio server è irraggiungibile?
 
@@ -42,12 +42,12 @@ Se il vostro server diventa non più raggiungibile le mail inviate al vostro ser
 
 Può succedere che le mail inviate dal vostro server YunoHost siano considerate come spam dai grandi provider di posta elettronica.
 A volte il vostro indirizzo IP viene considerato come dannoso o come fonte di spam perché è stato usato in precedenza per tale scopo da altri.
-Per accertarsi che il vostro indirizzo IP non sia presente nell'elenco degli indirizzi ritenuti dannosi, e nel caso rimuoverlo, potete seguire questo [link](/administer/troubleshooting/blacklist_forms).
+Per accertarsi che il vostro indirizzo IP non sia presente nell'elenco degli indirizzi ritenuti dannosi, e nel caso rimuoverlo, potete seguire questo [link](/admin/troubleshooting/blacklist_forms).
 
 ## Migrazione delle vostre mail da un fornitore terzo al vostro server YunoHost
 
-Consultate [questa pagina](/user_guide/email_migration).
+Consultate [questa pagina](/user/email_migration).
 
 ## Configurazione di un relay SMTP
 
-Consultate [questa pagina](/administer/tutorials/email_configure_relay).
+Consultate [questa pagina](/admin/tutorials/email_configure_relay).
