--- a/i18n/it/docusaurus-plugin-content-docs/current/03.admin/20.backups/05.evaluate.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.admin/20.backups/05.evaluate.mdx
@@ -26,11 +26,11 @@ Esempi di **backup sicuro e facilmente recuperabile**.
 
 ## Alcuni esempi di esecuzione del backup
 
-- [creare un file di backup e salvarlo manualmente (scelta di default per YunoHost)](/administer/backups/#manual-backup)
-- [backup automatizzato (scelta consigliata)](/administer/backups/backup_methods)
-- [backup su disco esterno](/administer/tutorials/external_storage)
-- [creazione di un'immagine o snapshot](/administer/backups/clone_filesystem)
-- [salvataggio dei dati con metodo personalizzato](/administer/backups/custom_backup_methods)
+- [creare un file di backup e salvarlo manualmente (scelta di default per YunoHost)](/admin/backups/#manual-backup)
+- [backup automatizzato (scelta consigliata)](/admin/backups/backup_methods)
+- [backup su disco esterno](/admin/tutorials/external_storage)
+- [creazione di un'immagine o snapshot](/admin/backups/clone_filesystem)
+- [salvataggio dei dati con metodo personalizzato](/admin/backups/custom_backup_methods)
 
 ## Rischi
 
