--- a/i18n/it/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/15.filezilla.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/15.filezilla.mdx
@@ -43,7 +43,7 @@ Installate e lanciate *FileZilla*
 
    ![vista della connessione al server remoto](/img/filezilla_6.png)
 
-2. Nel pannello di destra, raggiungete `/home/yunohost.backup/archives` dove si trovano gli [archivi di backup](/administer/backups/)
+2. Nel pannello di destra, raggiungete `/home/yunohost.backup/archives` dove si trovano gli [archivi di backup](/admin/backups/)
 
    ![la directory dove si trovano i backup di YunoHost](/img/filezilla_7.png)
 
