--- a/i18n/es/docusaurus-plugin-content-docs/current/03.admin/15.admin_guide/45.email.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/03.admin/15.admin_guide/45.email.mdx
@@ -24,7 +24,7 @@ Una nota de al menos 8~9/10 es un objetivo razonable.
 
 ## Clientes de mensajería
 
-Para interactuar con el servidor de mail, o sea leer y mandar emails, puedes instalar un cliente web como Roundcube o Rainloop en tu servidor - o configurar un cliente de Desktop o móvil como descrito en [esta página](/user_guide/email_configure_client).
+Para interactuar con el servidor de mail, o sea leer y mandar emails, puedes instalar un cliente web como Roundcube o Rainloop en tu servidor - o configurar un cliente de Desktop o móvil como descrito en [esta página](/user/email_configure_client).
 
 Los clientes Desktop o móvil tienen la ventaja de copiar tu emails en el equipo, así permitiendo la consulta desconectada de tus mensajes, y cierta protección frente a la posibilidad de un servidor averiado.
 
@@ -42,12 +42,12 @@ Si tu servidor se pone indisponible, los correos electrónicos mandados a tu ser
 
 It is possible that the emails sent from your YunoHost instance are considered as spam by the big email services.
 Is it possible that the IP address from your server have been previously been used to sent spam or that these email services consider your server as a spam sender.
-To ensure that your servers’ IP address isn't on these blacklists and to remove it from them, follow this [link](/administer/troubleshooting/blacklist_forms).
+To ensure that your servers’ IP address isn't on these blacklists and to remove it from them, follow this [link](/admin/troubleshooting/blacklist_forms).
 
 ## Migrating email from an email provider to a YunoHost instance
 
-See [this page](/user_guide/email_migration).
+See [this page](/user/email_migration).
 
 ## Configuring SMTP relay
 
-See [this page](/administer/tutorials/email_configure_relay).
+See [this page](/admin/tutorials/email_configure_relay).
