Fix forms.mdx wrong internal link

--- a/docs/06.contribute/15.dev/forms.mdx
+++ b/docs/06.contribute/15.dev/forms.mdx
@@ -272,7 +272,7 @@ Available only in config panels.
 Renders as a `button` in the web-admin and can be called with `yunohost [app|domain|settings] action run <action_id>` in CLI.
 
 Every options defined in an action section (a config panel section with at least one `button`) is guaranted to be shown/asked to the user and available in `scripts/config`'s scope.
-[check examples in advanced use cases](#actions).
+[check examples in advanced use cases](/contribute/packaging_apps/advanced/config_panels#actions).
 
 #### Example
 
