Update internal links after pages moved

--- a/docs/02.install/20.install_on/arm_board.mdx
+++ b/docs/02.install/20.install_on/arm_board.mdx
@@ -82,7 +82,7 @@ Now that you downloaded the image of Armbian, you should flash it on a microSD c
 
 ## <FAIcon icon="fa-terminal"/> Connect to the board
 
-Next you need to [find the local IP address of your server](/install/post_install/finding_the_local_ip) to connect as root user [via SSH](/admin/admin_guide/command_line) with the temporary password `1234`.
+Next you need to [find the local IP address of your server](/install/post_install/finding_the_local_ip) to connect as root user [via SSH](/admin/command_line) with the temporary password `1234`.
 
 ```bash
 ssh root@192.168.x.xxx
@@ -90,7 +90,7 @@ ssh root@192.168.x.xxx
 
 ## <FAIcon icon="fa-rocket"/> Run the install script
 
-- Open a command line prompt on your server (either directly or [through SSH](/admin/admin_guide/command_line))
+- Open a command line prompt on your server (either directly or [through SSH](/admin/command_line))
 - Make sure you are root (or type `sudo -i` to become root)
 - Run the following command:
 
