--- a/i18n/fr/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/60.security.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/60.security.mdx
@@ -108,7 +108,7 @@ sudo yunohost settings set security.ssh.ssh_compatibility -v modern
 
 YunoHost est administrable via une **API HTTP**, servie sur le port 6787 par défaut (seulement sur `localhost`).
 Elle permet d’administrer une grande partie de votre serveur, et peut donc être utilisée à des **fins malveillantes**.
-La meilleure chose à faire si vous êtes habitués à la ligne de commande est de désactiver le service `yunohost-api`, et **utiliser la [ligne de commande](/admin/admin_guide/command_line)** en SSH.
+La meilleure chose à faire si vous êtes habitués à la ligne de commande est de désactiver le service `yunohost-api`, et **utiliser la [ligne de commande](/admin/command_line)** en SSH.
 
 :::warning
 Ceci va désactiver à la fois l'API et l'interface d'administration web de YunoHost qui en dépend.
