--- a/i18n/fr/docusaurus-plugin-content-docs/current/04.user/10.email_migration.mdx
+++ b/i18n/fr/docusaurus-plugin-content-docs/current/04.user/10.email_migration.mdx
@@ -2,7 +2,7 @@
 title: Migrer ses emails d'un ancien serveur mail vers YunoHost
 ---
 
-*[Documentation en rapport avec l’email de YunoHost](/admin/admin_guide/email)*.
+*[Documentation en rapport avec l’email de YunoHost](/admin/email)*.
 
 La migration des emails d’un serveur à un autre peut se faire via deux outils recommandés : ImapSync ou Larch.
 
