--- a/i18n/it/docusaurus-plugin-content-docs/current/02.install/40.post_install/15.isp_box_config.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/02.install/40.post_install/15.isp_box_config.mdx
@@ -36,9 +36,9 @@ Nella pagina di amministrazione del vostro router cercate la sezione 'port forwa
 Dovete reindirizzare ognuna delle porte elencate di seguito, verso l'IP locale del vostro server, al fine di permettere il funzionamento dei servizi di YunoHost. Ogni servizio necessita di un reindirizzamento 'TCP'. Alcuni router nominano le porte in 'esterne' e 'interne', si tratta comunque della stessa porta.
 
 - Web: `80` <small>(HTTP)</small>, `443` <small>(HTTPS)</small>
-- [SSH](/admin/admin_guide/command_line): `22`
+- [SSH](/admin/command_line): `22`
 - [XMPP](https://wikipedia.org/wiki/XMPP): `5222` <small>(client)</small>, `5269` <small>(server)</small>
-- [Email](/admin/admin_guide/email): `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
+- [Email](/admin/email): `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
 
 Se utilizzate modem e router separati, dovete:
 
