--- a/i18n/it/docusaurus-plugin-content-docs/current/03.admin/10.admin.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.admin/10.admin.mdx
@@ -2,7 +2,7 @@
 title: Administrator web interface
 ---
 
-YunoHost ha un'interfaccia web di amministrazione. L'altro metodo è quello di usare la [linea di comando](/admin/admin_guide/command_line).
+YunoHost ha un'interfaccia web di amministrazione. L'altro metodo è quello di usare la [linea di comando](/admin/command_line).
 
 ### Accesso
 
