--- a/i18n/it/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/25.external_storage.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/25.external_storage.mdx
@@ -23,7 +23,7 @@ Il procedimento presentato qui inizia montando l'unica partizione del disco, in 
 
 - Prevedere un periodo temporale nel quale gli utenti del vostro server possono sopportare una interruzione dei servizi. I passaggi da compiere, anche se relativamente semplici, sono tecnicamente complessi e necessitano di un lasso di tempo **da dedicare in modo esclusivo**.
 
-- Conoscenza della connessione come root sul server anche via [SSH](/admin/admin_guide/command_line). (Nota bene: se siete connessi come utente `admin`, potete passare root con il comando `sudo su`)
+- Conoscenza della connessione come root sul server anche via [SSH](/admin/command_line). (Nota bene: se siete connessi come utente `admin`, potete passare root con il comando `sudo su`)
 
 - Conoscere i comandi `cd`, `ls`, `mkdir`, `rm`.
 
