--- a/i18n/it/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/60.security.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/60.security.mdx
@@ -103,7 +103,7 @@ sudo yunohost settings set security.ssh.ssh_compatibility -v modern
 
 La pagina di amministrazione di YunoHost è accessibile da un **API HTTP** che ascolta di default sulla porta 6787 (solo su localhost).
 Può essere usata per amministrare molti aspetti del vostro server e di conseguenza attori maligni possono usarla per danneggiarlo.
-La cosa migliore da fare, se conoscete l'iso dell'[interfaccia a lina di comando (CLI)](/admin/admin_guide/command_line), è disattivare il servizio `yunohost-api`.`
+La cosa migliore da fare, se conoscete l'iso dell'[interfaccia a lina di comando (CLI)](/admin/command_line), è disattivare il servizio `yunohost-api`.`
 
 :::warning
 Facendo così verranno completamente disabilitate le API di YunoHost e la pagina di amministrazione che si basa su queste.
