--- a/i18n/it/docusaurus-plugin-content-docs/current/04.user/10.email_migration.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/04.user/10.email_migration.mdx
@@ -2,7 +2,7 @@
 title: Spostare le proprie mail da un server terzo a YunoHost
 ---
 
-*[Documentazione integrativa del paragrafo relativo alle email di YunoHost](/admin/admin_guide/email)*.
+*[Documentazione integrativa del paragrafo relativo alle email di YunoHost](/admin/email)*.
 
 La migrazione delle proprie mail verso il proprio server YunoHost, può avvenire attraverso l'utilizzo di due programmi appositi : ImapSync o Larch.
 
