--- a/docs/02.install/40.post_install/05.configuration.mdx
+++ b/docs/02.install/40.post_install/05.configuration.mdx
@@ -23,14 +23,14 @@ For a VPS, please use the public IP address instead of the local domain or addre
   <TabItem value="web" label="From the web interface">
 
     :::warning
-    During the first visit, you will very likely encounter a security warning related to the certificate used by the server. For now, your server uses a self-signed certificate. You will later be able to add a certificate automatically recognized by web browsers as described in the [certificate documentation](/admin/admin_guide/domains/certificate).  For now, you should add a security exception to accept the current certificate. (Though, PLEASE, do not take the habit of blindly accepting this kind of security alert!)
+    During the first visit, you will very likely encounter a security warning related to the certificate used by the server. For now, your server uses a self-signed certificate. You will later be able to add a certificate automatically recognized by web browsers as described in the [certificate documentation](/admin/domains/certificate).  For now, you should add a security exception to accept the current certificate. (Though, PLEASE, do not take the habit of blindly accepting this kind of security alert!)
     :::
 
     You should then land on this page:
     <Figure caption="Preview of the Web initial configuration page" src="/img/postinstall_web.png"/>
   </TabItem>
   <TabItem value="cli" label="From the command line">
-    You can also perform the postinstallation with the command `yunohost tools postinstall` directly on the server, or [via SSH](/admin/admin_guide/command_line).
+    You can also perform the postinstallation with the command `yunohost tools postinstall` directly on the server, or [via SSH](/admin/command_line).
 
     <Figure caption="Preview of the command-line post-installation" src="/img/postinstall_cli.png"/>
   </TabItem>
@@ -68,7 +68,7 @@ Yes, you *have to* configure a domain name. If you don't have any domain name an
 
 ### <FAIcon icon="fa-key"/> First user
 
-The first user is now created at this stage. You should pick a username and a reasonably complex password. (We cannot stress enough that the password should be **robust**!) This user will be added to the Admins group, and will therefore be able to access the user portal, the web admin interface, and connect [via **SSH**](/admin/admin_guide/command_line) or [**SFTP**](/admin/tutorials/filezilla). Admins will also receive emails sent to `root@yourdomain.tld` and `admin@yourdomain.tld`: these emails may be used to send technical informations or alerts. You can later add additional users, which you can also add to the Admins group.
+The first user is now created at this stage. You should pick a username and a reasonably complex password. (We cannot stress enough that the password should be **robust**!) This user will be added to the Admins group, and will therefore be able to access the user portal, the web admin interface, and connect [via **SSH**](/admin/command_line) or [**SFTP**](/admin/tutorials/filezilla). Admins will also receive emails sent to `root@yourdomain.tld` and `admin@yourdomain.tld`: these emails may be used to send technical informations or alerts. You can later add additional users, which you can also add to the Admins group.
 
 This user replaces the old `admin` user, which some old documentation page may still refer to. In which case: just replace `admin` with your username.
 
@@ -110,7 +110,7 @@ Especially, installations on WSL or virtual machines will likely not be reachabl
 
 Once you configured DNS records and port forwarding (if needed), you should be able to install a Let's Encrypt certificate. This will get rid of the spooky security warning from earlier for new visitors.
 
-For more detailed instructions, or to lean more about SSL/TLS certificates, see [the corresponding page here](/admin/admin_guide/domains/certificate).
+For more detailed instructions, or to lean more about SSL/TLS certificates, see [the corresponding page here](/admin/domains/certificate).
 
 <Tabs groupId="admin-commands">
   <TabItem value="web" label="From the web interface">
