--- a/docs/02.install/40.post_install/15.isp_box_config.mdx
+++ b/docs/02.install/40.post_install/15.isp_box_config.mdx
@@ -36,9 +36,9 @@ In your router admin interface, look for something like 'router configuration' o
 Opening the ports listed below is necessary for the various services available in YunoHost to work. For each of them, the 'TCP' forwarding is needed. Some interfaces refer to 'external' and 'internal' ports: these are the same in our case.
 
 - Web: `80` <small>(HTTP)</small>, `443` <small>(HTTPS)</small>
-- [SSH](/admin/admin_guide/command_line): `22`
+- [SSH](/admin/command_line): `22`
 - [XMPP](https://wikipedia.org/wiki/XMPP): `5222` <small>(clients)</small>, `5269` <small>(servers)</small>
-- [Email](/admin/admin_guide/email): `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
+- [Email](/admin/email): `25`, `587` <small>(SMTP)</small>, `993` <small>(IMAP)</small>
 
 If you use both a modem and a router, then you need to do the following:
 
