--- a/docs/03.admin/50.troubleshooting/15.noaccess.mdx
+++ b/docs/03.admin/50.troubleshooting/15.noaccess.mdx
@@ -35,7 +35,7 @@ You can check that the DNS records are correct by comparing the results given by
 
 - A certificate error may be displayed if you have made a typo in the address bar of your browser.
 
-- If you have just installed your server, or just installed a new domain, it uses a self-signed certificate. In that case, it is possible and understandable to add a *temporary* security exception so that you can [install a Let's Encrypt certificate](/admin/admin_guide/domains/certificate), provided you have a secure Internet connection.
+- If you have just installed your server, or just installed a new domain, it uses a self-signed certificate. In that case, it is possible and understandable to add a *temporary* security exception so that you can [install a Let's Encrypt certificate](/admin/domains/certificate), provided you have a secure Internet connection.
 
 ## You have access via SSH but not via the webadmin, or inversely
 
@@ -61,7 +61,7 @@ Ban are usually 10 to 12-minute-long, and on IPv4 only.
 
 ### NGINX web server is broken
 
-Maybe the NGINX web server is out of order. You can check that [trough SSH](/admin/admin_guide/command_line) with the command `yunohost service status nginx`. If it is failing, check that its configuration is correct by running `nginx -t`. If it is indeed broken, it may be due to the installation or removal of a low-quality app... If you need support, [ask for it](/community/help).
+Maybe the NGINX web server is out of order. You can check that [trough SSH](/admin/command_line) with the command `yunohost service status nginx`. If it is failing, check that its configuration is correct by running `nginx -t`. If it is indeed broken, it may be due to the installation or removal of a low-quality app... If you need support, [ask for it](/community/help).
 
 The NGINX or SSH servers may have been killed due to a lack of storage space, RAM, or swap.
 
@@ -92,7 +92,7 @@ If you can reach the webadmin login page (force reload with `CTRL + F5` to be su
 
 If yoy are sure of your passord, it may be due to the `slapd` service failing. If that's the case, log into the server by SSH as `root`.
 
-- If your server is at home, you most likely have access to the local network. From this network, you can follow the [SSH instructions](/admin/admin_guide/command_line)`.
+- If your server is at home, you most likely have access to the local network. From this network, you can follow the [SSH instructions](/admin/command_line)`.
 - If your server is a VPS, your provider may offer a web console.
 
 Once logged in, you have to check the state of the service with `yunohost service status slapd` and/or reset your admin password with `yunohost tools adminpw`.
