--- a/i18n/de/docusaurus-plugin-content-docs/current/03.admin/20.users/index.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/03.admin/20.users/index.mdx
@@ -41,8 +41,8 @@ Finalize the user creation by clicking on the `Save` button.
 
 ## User groups and permissions
 
-See [this dedicated page](/admin/admin_guide/users/groups_and_permissions).
+See [this dedicated page](/admin/users/groups_and_permissions).
 
 ## SSH-Zugang
 
-Siehe [diese spezielle Seite](/admin/admin_guide/command_line).
+Siehe [diese spezielle Seite](/admin/command_line).
