--- a/i18n/it/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/45.certificate_custom.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.admin/45.tutorials/45.certificate_custom.mdx
@@ -3,7 +3,7 @@ title: Certificati personalizzati
 ---
 
 :::warning
-Dalla versione 2.5 YunoHost integra la gestione automatizzata dei certificati Let's Encrypt. Potete quindi facilmente e gratuitamente  [installare un certificato Let's Encrypt](/admin/admin_guide/domains/certificate). Questa guida descrive la procedura per installare un certificato, a pagamento, di una diversa autorità di certificazione (**Gandi**, **RapidSSL**, **StartSSL**, **Cacert**).
+Dalla versione 2.5 YunoHost integra la gestione automatizzata dei certificati Let's Encrypt. Potete quindi facilmente e gratuitamente  [installare un certificato Let's Encrypt](/admin/domains/certificate). Questa guida descrive la procedura per installare un certificato, a pagamento, di una diversa autorità di certificazione (**Gandi**, **RapidSSL**, **StartSSL**, **Cacert**).
 :::
 
 Nel corso delle versioni, sono state introdotte delle modifiche che possono impattare sulle procedure descritte di seguito:
@@ -33,7 +33,7 @@ pscp -P 22 CERTIFICATE.crt admin@DOMAIN.TLD:ssl.crt
 pscp -P 22 KEY.key admin@DOMAIN.TLD:ssl.key
 ```
 
-Una volta copiati i file, i passi successivi si faranno sul server via [ssh](/admin/admin_guide/command_line) o in locale.
+Una volta copiati i file, i passi successivi si faranno sul server via [ssh](/admin/command_line) o in locale.
 Per prima cosa create una directory per salvare i certificati in vostro possesso.
 
 ```bash
