--- a/i18n/it/docusaurus-plugin-content-docs/current/03.admin/50.troubleshooting/15.noaccess.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.admin/50.troubleshooting/15.noaccess.mdx
@@ -35,7 +35,7 @@ Puoi verificare la correttezza dei record DNS confrontando i risultati dati da [
 
 - Un errore sul certificato può essere visualizzato nel caso in cui hai scritto male l'indirizzo nella barra del browser.
 
-- Sei hai appena installato il tuo server o un nuovo dominio stai usando un certificato auto-firmato. In questo caso è possibile e comprensibile aggiungere una eccezione di sicurezza *temporanea* in modo che sia possibile [installare un certificato Let's Encrypt](/admin/admin_guide/domains/certificate), ammesso che tu abbian una connessione Internet sicura.
+- Sei hai appena installato il tuo server o un nuovo dominio stai usando un certificato auto-firmato. In questo caso è possibile e comprensibile aggiungere una eccezione di sicurezza *temporanea* in modo che sia possibile [installare un certificato Let's Encrypt](/admin/domains/certificate), ammesso che tu abbian una connessione Internet sicura.
 
 ## Puoi accedere via SSH ma non dalla pagina di amministrazione o l'inverso
 
@@ -61,7 +61,7 @@ I ban normalmente durano dai 0 ai 12 minuti e solo su IPv4.
 
 ### Il server web NGINX non funziona
 
-Maybe the NGINX web server is out of order. You can check that [trough SSH](/admin/admin_guide/command_line) with the command `yunohost service status nginx`. If it is failing, check that its configuration is correct by running `nginx -t`. If it is indeed broken, it may be due to the installation or removal of a low-quality app... If you need support, [ask for it](/community/help).
+Maybe the NGINX web server is out of order. You can check that [trough SSH](/admin/command_line) with the command `yunohost service status nginx`. If it is failing, check that its configuration is correct by running `nginx -t`. If it is indeed broken, it may be due to the installation or removal of a low-quality app... If you need support, [ask for it](/community/help).
 
 The NGINX or SSH servers may have been killed due to a lack of storage space, RAM, or swap.
 
@@ -92,7 +92,7 @@ If you can reach the webadmin login page (force reload with `CTRL + F5` to be su
 
 If yoy are sure of your passord, it may be due to the `slapd` service failing. If that's the case, log into the server by SSH as `root`.
 
-- If your server is at home, you most likely have access to the local network. From this network, you can follow the [SSH instructions](/admin/admin_guide/command_line)`.
+- If your server is at home, you most likely have access to the local network. From this network, you can follow the [SSH instructions](/admin/command_line)`.
 - If your server is a VPS, your provider may offer a web console.
 
 Once logged in, you have to check the state of the service with `yunohost service status slapd` and/or reset your admin password with `yunohost tools adminpw`.
