Rename email_configure_client url

--- a/docs/03.admin/35.email.mdx
+++ b/docs/03.admin/35.email.mdx
@@ -22,7 +22,7 @@ To validate your setup:
 
 ## Email clients
 
-To interact with the email sever (read and send emails), you can either install a webclient such as Roundcube or Rainloop on your server - or configure a desktop/mobile client as described in [this page](/user/email_configure_client).
+To interact with the email sever (read and send emails), you can either install a webclient such as Roundcube or Rainloop on your server - or configure a desktop/mobile client as described in [this page](/user/email_clients).
 
 Desktop and mobile clients have the advantage of copying your emails to the device, allowing offline viewing and relative protection against possible hardware failures of your server.
 
