--- a/i18n/de/docusaurus-plugin-content-docs/current/03.admin/35.email.mdx
+++ b/i18n/de/docusaurus-plugin-content-docs/current/03.admin/35.email.mdx
@@ -22,7 +22,7 @@ Um Ihre Einstellungen zu validieren:
 
 ## E-Mail-Programme
 
-Um mit dem E-Mail-Server zu interagieren (E-Mails lesen und senden), können Sie entweder einen Webclient wie Roundcube oder Rainloop auf Ihrem Server installieren - oder einen Desktop-/Mobil-Client, wie auf [dieser Seite](/user/email_configure_client) beschrieben, konfigurieren.
+Um mit dem E-Mail-Server zu interagieren (E-Mails lesen und senden), können Sie entweder einen Webclient wie Roundcube oder Rainloop auf Ihrem Server installieren - oder einen Desktop-/Mobil-Client, wie auf [dieser Seite](/user/email_clients) beschrieben, konfigurieren.
 
 Desktop- und Mobil-Clients haben den Vorteil, dass sie Ihre E-Mails auf das Gerät kopieren, was eine Offline-Anzeige und einen relativen Schutz gegen mögliche Hardware-Ausfälle Ihres Servers ermöglicht.
 
