--- a/i18n/es/docusaurus-plugin-content-docs/current/03.admin/35.email.mdx
+++ b/i18n/es/docusaurus-plugin-content-docs/current/03.admin/35.email.mdx
@@ -24,7 +24,7 @@ Una nota de al menos 8~9/10 es un objetivo razonable.
 
 ## Clientes de mensajería
 
-Para interactuar con el servidor de mail, o sea leer y mandar emails, puedes instalar un cliente web como Roundcube o Rainloop en tu servidor - o configurar un cliente de Desktop o móvil como descrito en [esta página](/user/email_configure_client).
+Para interactuar con el servidor de mail, o sea leer y mandar emails, puedes instalar un cliente web como Roundcube o Rainloop en tu servidor - o configurar un cliente de Desktop o móvil como descrito en [esta página](/user/email_clients).
 
 Los clientes Desktop o móvil tienen la ventaja de copiar tu emails en el equipo, así permitiendo la consulta desconectada de tus mensajes, y cierta protección frente a la posibilidad de un servidor averiado.
 
