--- a/i18n/it/docusaurus-plugin-content-docs/current/03.admin/35.email.mdx
+++ b/i18n/it/docusaurus-plugin-content-docs/current/03.admin/35.email.mdx
@@ -22,7 +22,7 @@ Per assicurarsi una configurazione corretta:
 
 ## Programmi (client) per la posta elettronica
 
-Per interagire con il vostro server mail, ricevere e inviare le mail, potete installare un client web come Roundcube o Rainloop sul vostro server, oppure configurare un client su pc o smartphone, come descritto [in questa pagina](/user/email_configure_client).
+Per interagire con il vostro server mail, ricevere e inviare le mail, potete installare un client web come Roundcube o Rainloop sul vostro server, oppure configurare un client su pc o smartphone, come descritto [in questa pagina](/user/email_clients).
 
 I client sul pc e smartphone godono del vantaggio di scaricare i messaggi sul device, permettendo la consultazione dei messaggi anche off line e una parziale protezione dalla perdita dei messaggi in caso di guasti al vostro server.
 
